--- a/templates/page.html
+++ b/templates/page.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Robert Dyro" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="{{ '/static/stylesheet.css' | url }}" />
+    <link rel="stylesheet" href="{{ get_pygments_stylesheet()|url }}">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>" />
   </head>
   <body>
