--- a/templates/page.html
+++ b/templates/page.html
@@ -30,9 +30,9 @@
           </td>
         </tr>
         <tr style="width:100px"><td colspan="2"></td></tr>
-        <tr style="width=100%;padding:0px">
+        <tr style="width:100%;padding:0px">
           <td colspan="2" style="height:100%;padding:0px;vertical-align:top;">
-            {{ this.body }}
+            {{ this.body | latex2embed_math }}
           </td>
         </tr>
       </tbody>
