--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
         <td style="padding:2.5%;width:63%;vertical-align:middle">
           <p style="text-align:center"><name>Robert Dyro</name></p>
           <p> I am a PhD candidate in <a
-            href="https://stanfordasl.github.io/"> Stanford Autonomous Systems
+            href="https://stanfordasl.github.io/">Autonomous Systems
             Lab (ASL) </a> at Stanford University, where I work on modeling
             and optimization algorithms for robotics.</p>
             <p style="text-align:center">
