--- a/templates/home.html
+++ b/templates/home.html
@@ -15,10 +15,13 @@
       <tr style="padding:0px">
         <td style="padding:2.5%;width:63%;vertical-align:middle">
           <p style="text-align:center"><name>Robert Dyro</name></p>
-          <p> I am a PhD candidate in <a
-            href="https://stanfordasl.github.io/">Autonomous Systems
-            Lab (ASL) </a> at Stanford University, where I work on modeling
-            and optimization algorithms for robotics.</p>
+          <p>
+            I work on the <a href="https://jax.readthedocs.io/">JAX</a> External
+            Team as Google. I completed my PhD in <a
+            href="https://stanfordasl.github.io/"> Autonomous Systems Lab
+            (ASL)</a> at Stanford University, on differentiable optimization
+            applied to behavior inference in autonomous driving.
+          </p>
             <p style="text-align:center">
               <a href="mailto:rdyro@stanford.edu">Email</a> &nbsp/&nbsp
               <a href="{{ '/data/RobertDyro-resume.pdf' | url }}">Resume</a> &nbsp/&nbsp
