new image and corrections

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,11 +16,11 @@
         <td style="padding:2.5%;width:63%;vertical-align:middle">
           <p style="text-align:center"><name>Robert Dyro</name></p>
           <p>
-            I work on the <a href="https://jax.readthedocs.io/">JAX</a> External
-            Team as Google. I completed my PhD in <a
-            href="https://stanfordasl.github.io/"> Autonomous Systems Lab
-            (ASL)</a> at Stanford University, on differentiable optimization
-            applied to behavior inference in autonomous driving.
+            I work on <a href="https://jax.readthedocs.io/">JAX</a> at Google. I
+            completed my PhD in <a href="https://stanfordasl.github.io/">
+            Autonomous Systems Lab (ASL)</a> at Stanford University, on
+            differentiable optimization applied to behavior inference in
+            autonomous driving.
           </p>
             <p style="text-align:center">
               <a href="mailto:rdyro@stanford.edu">Email</a> &nbsp/&nbsp
@@ -33,7 +33,7 @@
           </td>
           <td style="padding:2.5%;width:40%;max-width:40%">
             <a href="images/RobertDyro.jpg"><img style="width:100%;max-width:100%" alt="profile photo"
-              src="images/RobertDyro_circle.jpg" class="hoverZoomLink"></a>
+              src="images/RobertDyro_circle.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
